multiple select for person wired into new taggings, no styling

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -8,6 +8,8 @@
       <%= label_tag :content, "Event name" %>
       <%= text_field_tag :content %>
 
+      <%= select_tag(:people, options_from_collection_for_select(@people,"id","name"), multiple: true) %>
+
       <%= submit_tag "Create tagged event" %>
 
     <% end %>
