don't count on fade dates

--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -35,8 +35,10 @@
               <strong>
                 <% if item.happening_date.present? %>
                   <%= "#{item.happening_date.strftime('%m/%d/%y')}: " %>
-                <% elsif item.start_date.present? %>
+                <% elsif item.start_date.present? and item.fade_date.present? %>
                   <%= "#{item.start_date.strftime('%m/%d/%y')} to #{item.fade_date.strftime('%m/%d/%y')}: " %>
+                <% elsif item.start_date.present? %>
+                  <%= "#{item.start_date.strftime('%m/%d/%y')}: " %>
                 <% else %>
                   <%= "#{item.created_at.strftime('%m/%d/%y')}: " %>
                 <% end %>
