--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
         <%= link_to "Home page", root_path %> |
         <%= link_to "RailsAdmin", "/admin" %> |
         <%= link_to "New deed", deeds_precommit_path %> | 
-        <%= link_to "People table", people_table_path  %>
+        <%= link_to "People table", people_table_path  %> |
+        <%= link_to "Take a survey", new_survey_path %>
       </div>
     <% end %>
 
