--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -3,7 +3,20 @@
 <div class="container">
   <div class="row">
 
-    <p>Edit event <%= "#{@event.id}" %></p>
+    <h2>Edit event <%= "'#{@event.content}' (ID: #{@event.id})" %></h2>
+
+    <% if @tag.present? %>
+      <% @people.each do |person| %>
+        <% prefix = "person[#{person.id}]" %>
+        <% person_attributes = [:first_name,:last_name] %>
+        <div class="person-attributes">
+          <% person_attributes.each do |attribute| %>
+            <%= label_tag "#{prefix}[#{attribute}]", "#{attribute.to_s.titleize}" %>
+            <%= text_field_tag "#{prefix}[#{attribute}]" %>
+          <% end %>
+        </div>
+      <% end %>
+    <% end %>
 
   </div>
 </div>
