--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -7,6 +7,19 @@
 
     <%= form_tag event_path(@event.id), method: :patch do %>
 
+      <h3>Event variables</h3>
+
+      <div>
+        <%= label_tag "event[content]" %>
+        <%= text_field_tag "event[content]", @event.content %>
+        <%= label_tag "event[notes]" %>
+        <%= text_area_tag "event[notes]", @event.notes %>
+        <%= label_tag "event[happening_date]" %>
+        <%= date_select "event","happening_date", default: (@event.happening_date.present? ? @event.happening_date : Date.today)  %>
+      </div>
+
+      <h3>People</h3>
+
       <% if @tag.present? %>
         <% @people.each do |person| %>
           <% prefix = "people[#{person.id}]" %>
