--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -25,6 +25,8 @@
           <% prefix = "previously_attached_people[#{person.id}]" %>
           <% person_attributes = @person_attributes %>
           <div class="person-attributes">
+            <%= link_to "Edit", edit_person_path(person) %> | 
+            <%= link_to "RA", "/admin/person/#{person.id}/edit" %>
             <% person_attributes.each do |attribute| %>
               <%= label_tag "#{prefix}[#{attribute}]", "#{attribute.to_s.titleize}" %>
               <%= text_field_tag "#{prefix}[#{attribute}]", person.send(attribute) %>
