result makes sense now

--- a/app/views/deeds/show.html.erb
+++ b/app/views/deeds/show.html.erb
@@ -8,7 +8,7 @@
       <p><%= "#{@plan.name}" %></p>
 
       <% if @time_elapsed.present? %>
-        <strong><%= @time_elapsed %></strong> minutes taken during deed completion.
+        <strong><%= @minutes_elapsed %></strong> minutes taken during deed completion.
       <% end %>
 
       <h3>Surveys</h3>
