--- a/app/views/deeds/show.html.erb
+++ b/app/views/deeds/show.html.erb
@@ -7,7 +7,7 @@
       <h3>Plan</h3>
       <p><%= "#{@plan.name}" %></p>
 
-      <% if @time_elapsed.present? %>
+      <% if @minutes_elapsed.present? %>
         <strong><%= @minutes_elapsed %></strong> minutes taken during deed completion.
       <% end %>
 
