--- a/app/views/communications/_simple_search_box.html.erb
+++ b/app/views/communications/_simple_search_box.html.erb
@@ -1,1 +1,1 @@
-<%= select_tag(return_variable, options_for_select(search_terms_list), multiple: false, class: 'provider-search-terms-select') %>
+<%= select_tag(return_variable, options_for_select(search_terms_list), multiple: false, class: 'chosen-select') %>
