--- a/app/views/communications/_individual_new.html.erb
+++ b/app/views/communications/_individual_new.html.erb
@@ -1,8 +1,8 @@
 <% prefix = "new_people[#{index_number}]" %>
 <hr>
 <div>
-  <%= label_tag "#{prefix}[id]", "Person" %>
-  <%= render partial: "communications/simple_search_box", locals: {search_terms_list: people, return_variable: "#{prefix}[id]"} %>
+  <%= label_tag "#{prefix}[name_info]", "Person" %>
+  <%= render partial: "communications/simple_search_box", locals: {search_terms_list: people, return_variable: "#{prefix}[name_info]"} %>
 </div>
 <% [:medium,:contents,].each do |string_field| %>
   <div>
