--- a/app/views/communications/_individual_new.html.erb
+++ b/app/views/communications/_individual_new.html.erb
@@ -4,6 +4,9 @@
   <%= label_tag "#{prefix}[name_info]", "Person" %>
   <%= render partial: "communications/simple_search_box", locals: {search_terms_list: people, return_variable: "#{prefix}[name_info]"} %>
 </div>
+<div>
+  <%= date_select "#{prefix}[when]","when", default: Date.today %>
+</div>
 <% [:medium,:contents,].each do |string_field| %>
   <div>
     <%= label_tag "#{prefix}[#{string_field}]", string_field %>
