--- a/app/views/communications/new.html.erb
+++ b/app/views/communications/new.html.erb
@@ -7,5 +7,8 @@
     <%= render partial: "communications/individual_new", locals: {index_number: n, people: @people} %>
   <% end %>
 
+  <p>NOT WIRED UP</p>
+  <%= render partial: "events/unexisting_people_within_form", locals: {how_many_rows: 5} %>
+
   <%= submit_tag "Add communications", class: "save-button" %>
 <% end %>
