--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -7,15 +7,19 @@
 
     <%= form_tag event_path(@event.id), method: :patch do %>
 
-      <h3>Event variables</h3>
-
-      <div>
-        <%= label_tag "event[content]" %>
-        <%= text_field_tag "event[content]", @event.content %>
-        <%= label_tag "event[notes]" %>
-        <%= text_area_tag "event[notes]", @event.notes %>
-        <%= label_tag "event[happening_date]" %>
-        <%= date_select "event","happening_date", default: (@event.happening_date.present? ? @event.happening_date : Date.today)  %>
+      <div class="row">
+        <div class="col-md-4">
+          <%= label_tag "event[content]", "Title" %>
+          <%= text_field_tag "event[content]", @event.content %>
+        </div>
+        <div class="col-md-4">
+          <%= label_tag "event[notes]", "Notes" %>
+          <%= text_area_tag "event[notes]", @event.notes %>
+        </div>
+        <div class="col-md-4">
+          <%= label_tag "event[happening_date]", "Date" %>
+          <%= date_select "event","happening_date", default: (@event.happening_date.present? ? @event.happening_date : Date.today)  %>
+        </div>
       </div>
 
       <h3>Previously attached people</h3>
@@ -24,26 +28,35 @@
         <% @people.each do |person| %>
           <% prefix = "previously_attached_people[#{person.id}]" %>
           <% person_attributes = @person_attributes %>
-          <div class="person-attributes">
-            <%= link_to "Edit", edit_person_path(person) %> | 
-            <%= link_to "RA", "/admin/person/#{person.id}/edit" %>
-            <% person_attributes.each do |attribute| %>
-              <%= label_tag "#{prefix}[#{attribute}]", "#{attribute.to_s.titleize}" %>
-              <%= text_field_tag "#{prefix}[#{attribute}]", person.send(attribute) %>
-            <% end %>
-            <% comms = Communication.where(event_id: @event.id, person_id: person.id) %>
-            <% if comms.present? %>
-              <% communication = comms[0] %>
-              <%= hidden_field_tag "#{prefix}[communication_id]", communication.id %>
-              <%= label_tag "Personal communication" %>
-              <%= text_area_tag "#{prefix}[communication_contents]", communication.contents %>
-            <% end %>
-            <%= label_tag "#{prefix}[tags]", "Tags" %>
-            <%= select_tag("#{prefix}[tags]", options_from_collection_for_select(@tags,"id","name"), multiple: true, class: "chosen-select") %>
-            <%= label_tag "Existing tags" %>
-            <% person.taggings.each do |tagging| %>
-              <%= render partial: "people/tagging", locals: {tagging: tagging} %>
-            <% end %>
+          <div class="row person-attributes">
+            <div class="col-md-4">
+              <p>
+                <%= link_to "Edit person", edit_person_path(person) %> | 
+                <%= link_to "RA person", "/admin/person/#{person.id}/edit" %>
+              </p>
+              <% person_attributes.each do |attribute| %>
+                <p>
+                  <%= label_tag "#{prefix}[#{attribute}]", "#{attribute.to_s.titleize}" %>
+                  <%= text_field_tag "#{prefix}[#{attribute}]", person.send(attribute) %>
+                </p>
+              <% end %>
+            </div>
+            <div class="col-md-4">
+              <% comms = Communication.where(event_id: @event.id, person_id: person.id) %>
+              <% if comms.present? %>
+                <% communication = comms[0] %>
+                <%= hidden_field_tag "#{prefix}[communication_id]", communication.id %>
+                <p><%= label_tag "Personal communication" %></p>
+                <%= text_area_tag "#{prefix}[communication_contents]", communication.contents, rows: 8 %>
+              <% end %>
+            </div>
+            <div class="col-md-4">
+              <%= label_tag "#{prefix}[tags]", "Add tags" %>
+              <%= select_tag("#{prefix}[tags]", options_from_collection_for_select(@tags,"id","name"), multiple: true, class: "chosen-select") %> 
+              <% person.taggings.each do |tagging| %>
+                <%= render partial: "people/tagging", locals: {tagging: tagging} %>
+              <% end %>                
+            </div>
           </div>
         <% end %>
       <% end %>
