--- a/app/views/user_mailer/daily_email.html.erb
+++ b/app/views/user_mailer/daily_email.html.erb
@@ -1,5 +1,7 @@
 <p>The links in this aren't useful. <%= link_to "Go to the mnemonic site", root_url %> to make changes.</p>
 
+<p>Make sure to <%= link_to "take a survey", new_survey_path %> today!</p>
+
 <hr>
 <%= render partial: "/displays/event_display", locals: {events: @events} %>
 <hr>
