--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -1,3 +1,36 @@
 <%= link_to "Randomize", plan_path(@random_plan_id) %>
+<% header_text = "#{@plan.name}" %>
+<% header_text = "DISMISSED - #{header_text}" if @plan.dismissed %>
 
-<h2><%= "#{@plan.name}" %></h2>
+<h2><%= "#{header_text}" %></h2>
+<div class="row">
+  <div class="col-md-2">
+    <%= "Minimum minutes: #{@plan.minimum_minutes}" %>
+  </div>
+  <div class="col-md-9">
+    <% @display_flags.each do |flag| %>
+      <% if @plan.send(flag) == true %>
+        <span><%= "#{flag}" %></span>
+      <% end %>
+    <% end %>
+  </div>
+  <div class="col-md-1">
+    <%= link_to "Edit", "/admin/plans/#{@plan.id}" %>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Why care?</h3>
+    <%= "NOT IMPLEMENTED" %>
+  </div>
+  <div class="col-md-6">
+    <h3>Notes</h3>
+    <%= "#{@plan.notes}" %>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <h3>Previous experiences</h3>
+    <%= "NOT IMPLEMENTED" %>
+  </div>
+</div>
