--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -21,7 +21,7 @@
 <div class="row">
   <div class="col-md-6">
     <h3>Why care?</h3>
-    <%= "NOT IMPLEMENTED" %>
+    <%= "#{raw(@plan.why_care)}".html_safe %>
   </div>
   <div class="col-md-6">
     <h3>Notes</h3>
