--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -15,7 +15,7 @@
     <% end %>
   </div>
   <div class="col-md-1">
-    <%= link_to "Edit", "/admin/plans/#{@plan.id}" %>
+    <%= link_to "Edit", "/admin/plan/#{@plan.id}/edit" %>
   </div>
 </div>
 <div class="row">
