--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -18,7 +18,7 @@
       </tr>
       <% @plans.each do |plan| %>
         <tr>
-          <td><%= plan.name %></td>
+          <td><%= link_to plan.name, plan_path(plan.id) %></td>
           <td><%= plan.notes %></td>
           <td><%= plan.minimum_minutes %></td>
           <td><%= plan.seems_purposeful %></td>
