--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -31,6 +31,12 @@
 <div class="row">
   <div class="col-md-12">
     <h3>Previous experiences</h3>
-    <%= "NOT IMPLEMENTED" %>
+    <% @deeds.each do |deed| %>
+      <% after = deed.after_survey %>
+      <% if after.present? and after.answers.present? %>
+        <% reflection_answer = after.answers.select{|a| a.question_id == @self_reflection_id} %>
+        <p><%= "#{deed.created_at.to_s}: #{reflection_answer}" %></p>
+      <% end %>
+    <% end %>
   </div>
 </div>
