plan index improvement

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
             <div>
               <%= link_to "Home page", root_path %> |
               <%= link_to "RailsAdmin", "/admin" %> |
-              <%= link_to "People table", people_table_path  %>
+              <%= link_to "People table", people_table_path  %> |
+              <%= link_to "Plans", plans_path %>
             </div>
             <div>
               New: 
