dummy form submit working

--- a/app/views/people/prospectives.html.erb
+++ b/app/views/people/prospectives.html.erb
@@ -1,3 +1,13 @@
-<% @people.each do |person| %>
-  <%= render partial: "people/person_overview", locals: { person_attributes: @overview_attributes, person: person, communications: nil, all_tags: @all_tags } %>
-<% end %>
+<% provide(:title,"Prospective people handling") %>
+
+<div class="container">
+  <div class="row">
+    <%= form_tag :action => "prospectives_submission", :controller => "people" do %>
+      <% @people.each do |person| %>
+        <%= render partial: "people/person_overview", locals: { person_attributes: @overview_attributes, person: person, communications: nil, all_tags: @all_tags } %>
+      <% end %>
+
+      <%= submit_tag "Update people" %>
+    <% end %>
+  </div>
+</div>
