person destruction and contact_method ignore creation. weirdly foot in both camps, will change a lot when email decoupled

--- a/app/views/people/_person_overview.html.erb
+++ b/app/views/people/_person_overview.html.erb
@@ -22,7 +22,7 @@
       </div>
       <div>
         <%= radio_button_tag "#{prefix}[select_action]", "block_future_email", false %>
-        <%= label_tag "Block future email [NOT IMPLEMENTED]" %>
+        <%= label_tag "Block future email" %>
       </div>
     <% end %>
   </div>
