--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -6,7 +6,7 @@
       <p><strong><%= @person.display_name %> (<%= link_to "RA edit", "#{@person.link_string}" %>)</strong></p>
       <p><%= @person.display_birthday %></p>
       <p><%= @person.display_age %></p>
-      <p><%= mail_to @person.email %></p>
+      <p><%= mail_to @person.contact_info(:email) %></p>
       <p><%= @person.phone %></p>
       <%= render partial: "people/social_links", locals: {person: @person} %>
       <p>Notes: <%= @person.notes %></p>
