--- a/app/views/events/_existing_people_within_form.html.erb
+++ b/app/views/events/_existing_people_within_form.html.erb
@@ -1,4 +1,4 @@
 <div>
   <p>Existing people</p>
-  <%= select_tag(return_symbol, options_from_collection_for_select(people,"id","name"), multiple: true, class: "chosen-select") %>
+  <%= select_tag(return_variable, options_from_collection_for_select(people,"id","name"), multiple: true, class: "chosen-select") %>
 </div>
