--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -61,11 +61,11 @@
     <%= form_tag person_path(@person), method: :patch do %>
       <div>
         <p><strong>Add tags:</strong></p>
-        <%= select_tag(:tags, options_from_collection_for_select(@tags,"id","name"), multiple: true, class: "chosen-select") %>
+        <%= select_tag("#{@prefix}[tags]", options_from_collection_for_select(@tags,"id","name"), multiple: true, class: "chosen-select") %>
       </div>
       <div>
         <p class="top-margin"><strong>Add or edit contact methods:</strong></p>
-        <%= render partial: "people/contact_methods", locals: {person: @person, prefix: "contact_methods"} %>
+        <%= render partial: "people/contact_methods", locals: {person: @person, prefix: "#{@prefix}"} %>
       </div>
       <div>
         <%= submit_tag "Save tags &| contact methods", class: "top-margin" %>
