search people from header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,10 @@
               <%= link_to "Survey", new_survey_path %>
             </div>
             <div>
-              <%= button_to "Go", root_path, class: "fleft" %>
-              <%= " to:" %>
-              <%= select_tag(:navigate_to_person, options_from_collection_for_select(Person.all,"id","name"), multiple: false, class: "chosen-select") %>
+              <%= form_tag({action: "prospectives_submission", controller: "people"}, method: "get") do %>
+                <%= select_tag(:navigate_to_person, options_from_collection_for_select(Person.all,"id","name"), multiple: false, class: "chosen-select") %>
+                <%= submit_tag "Go" %>
+              <% end %>
             </div>
           <% end %>
         </div>
