show higher priority people higher

--- a/app/views/displays/_event_display.html.erb
+++ b/app/views/displays/_event_display.html.erb
@@ -1,4 +1,5 @@
 <% titles_and_events = [ 
+  ["Closest relationships",events[:closest]],
   ["Events with specific times",events[:specific_dates]], 
   ["Events with time ranges",events[:ranges]] 
 ] %>
